[package]
name = "pake"
version = "3.7.8"
description = "🤱🏻 Turn any webpage into a desktop app with Rust."
authors = ["Tw93"]
license = "MIT"
repository = "https://github.com/tw93/Pake"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.147"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tauri = { version = "2.9.5", features = [
  "tray-icon",
  "image-ico",
  "image-png",
  "macos-proxy",
] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-http = "2.5.4"
tauri-plugin-global-shortcut = { version = "2.3.1" }
tauri-plugin-shell = { version = "2.3.3" }
tauri-plugin-opener = { version = "2.5.2" }
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-notification = "2.3.3"

[features]
# this feature is used for development builds from development cli
cli-build = []
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "z"
strip = true
