[package]
name = "pake"
version = "3.11.5"
description = "🤱🏻 Turn any webpage into a desktop app with Rust."
authors = ["Tw93"]
license = "MIT"
repository = "https://github.com/tw93/Pake"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["time"] }
tauri = { version = "2.10.2", features = [
  "tray-icon",
  "image-ico",
  "image-png",
  "macos-proxy",
] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-http = "2.5.7"
tauri-plugin-global-shortcut = { version = "2.3.1" }
tauri-plugin-shell = { version = "2.3.5" }
tauri-plugin-opener = { version = "2.5.3" }
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-notification = "2.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[features]
# this feature is used for development builds from development cli
cli-build = []
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true
