[package]
name = "webpake-core"
description = "Shared configuration types and validation for WebPake"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
