[package]
name = "webpake-packager"
description = "Build pipeline: icon fetching, config generation, Tauri build orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
webpake-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
image = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
ico = { workspace = true }
icns = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
image = { workspace = true }

[[example]]
name = "generate_icons"
path = "examples/generate_icons.rs"
